# challenge-python-v1-Dinopedia

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dinopedia/dinopedia/: config.py  settings.py  urls.py
dinopedia/dinosaurs/: admin.py  models.py  tests.py  urls.py  views.py
dinopedia/dinosaurs/migrations/: 0001_initial.py
dinopedia/dinosaurs/static/dinosaurs/: index.css  post-detail.css  post.css
dinopedia/dinosaurs/templates/dinosaurs/: 404.html  all-posts.html  base.html  favorite-posts.html  index.html  post-detail.html  search-results.html
dinopedia/dinosaurs/templates/dinosaurs/includes/: post.html
dinopedia/staticfiles/dinosaurs/: all-posts.css  app.css  favorite-posts.css
