
[tool.poetry]
name = "challenge-python-v1-Dinopedia"
version = "0.1.0"
description = ""
authors = ["Stefanos Pizanias <s.pizanius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "*"
psycopg2 = "*"
pytest = "*"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
